--- a/sections/featured-collection.liquid
+++ b/sections/featured-collection.liquid
@@ -29,8 +29,8 @@
     </div>
 
       <div class="collection-swiper relative z-[1] overflow-hidden px-20">
-        <div class="collection-prev focus-visible:ring-inset w-18 flex items-center justify-center">{% render 'icon-arrow-small', class: 'absolute top-1/2 left-padding-sm -translate-y-1/2 -rotate-180 w-2 lg:w-3' %}</div>
-        <div class="collection-next focus-visible:ring-inset w-18 flex items-center justify-center">{% render 'icon-arrow-small', class: 'absolute top-1/2 right-padding-sm -translate-y-1/2 w-2 lg:w-3' %}</div>
+        <div class="collection-prev focus-visible:ring-inset w-18 flex items-center justify-center">{% render 'icon-arrow-small', class: 'absolute top-1/2 left-5 -translate-y-1/2 -rotate-180 w-2 lg:w-3' %}</div>
+        <div class="collection-next focus-visible:ring-inset w-18 flex items-center justify-center">{% render 'icon-arrow-small', class: 'absolute top-1/2 right-5 -translate-y-1/2 w-2 lg:w-3' %}</div>
 
         <ul class="flex swiper-wrapper">
           {%- for collection_product in collection.products -%}
