--- a/snippets/preload-assets.liquid
+++ b/snippets/preload-assets.liquid
@@ -1,6 +1,6 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,400;0,600;1,400;1,600&display=swap" rel="stylesheet">
+<link href="https://webfonts3.radimpesko.com/RP-W-67a3b721-216e-4ea1-9933-a4482839d0ee" rel="stylesheet">
 
 <link rel="preconnect" href="https://pay.shopify.com">
 <link rel="preconnect" href="https://cdn.shopify.com">
